@@ -1,40 +1,6 @@
 # -*- coding: utf-8 -*-
 #
 # $Id$
-#
-# Copyright (c) 2010 by ['Tiberiu Ichim']
-# Generator: ArchGenXML Version 2.4.1
-#            http://plone.org/products/archgenxml
-#
-# GNU General Public License (GPL)
-#
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; either version 2
-# of the License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-# 02110-1301, USA.
-#
-
-__author__ = """Tiberiu Ichim <unknown>"""
-__docformat__ = 'plaintext'
-
-
-# There are three ways to inject custom code here:
-#
-#   - To set global configuration variables, create a file AppConfig.py.
-#       This will be imported in config.py, which in turn is imported in
-#       each generated class and in this file.
-#   - To perform custom initialisation after types have been registered,
-#       use the protected code section at the bottom of initialize().
 
 import logging
 logger = logging.getLogger('indicators')
@@ -43,27 +9,19 @@ logger.debug('Installing Product')
 import os
 import os.path
 from Globals import package_home
-import Products.CMFPlone.interfaces
 from Products.Archetypes import listTypes
 from Products.Archetypes.atapi import *
-from Products.Archetypes.utils import capitalize
 from Products.CMFCore import DirectoryView
-from Products.CMFCore import permissions as cmfpermissions
 from Products.CMFCore import utils as cmfutils
-from Products.CMFPlone.utils import ToolInit
 from config import *
 
 DirectoryView.registerDirectory('skins', product_globals)
-
-
-##code-section custom-init-head #fill in your manual code here
 
 # temporarily add the path to the namespace package to the products path,
 # so that the directory views are set up correctly
 # Register our skins directory - this makes it available via portal_skins.
 
 from Products.CMFCore import utils
-from Globals import package_home
 from os.path import dirname
 ppath = utils.ProductsPath
 utils.ProductsPath.append(dirname(package_home(product_globals)))
@@ -73,17 +31,11 @@ utils.ProductsPath = ppath
 from zope.i18nmessageid import MessageFactory
 msg_factory = MessageFactory('indicators')
 
-##/code-section custom-init-head
-
 
 def initialize(context):
     """initialize product (called by zope)"""
-    ##code-section custom-init-top #fill in your manual code here
-    ##/code-section custom-init-top
-
     # imports packages and types for registration
     import content
-
 
     # Initialize portal content
     all_content_types, all_constructors, all_ftis = process_types(
@@ -107,7 +59,4 @@ def initialize(context):
         context.registerClass(meta_type   = all_ftis[i]['meta_type'],
                               constructors= (all_constructors[i],),
                               permission  = ADD_CONTENT_PERMISSIONS[klassname])
-
-    ##code-section custom-init-bottom #fill in your manual code here
-    ##/code-section custom-init-bottom
 
