@@ -1,5 +1,2 @@
-__author__ = """Tiberiu Ichim <unknown>"""
-__docformat__ = 'plaintext'
-
 import test_indicators
 
